--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,8 +1,32 @@
+@media screen and (max-width: 1145px) {
+    .featured-items{
+        gap: 18px;
+    }
+    .featured-flower > img{
+        width: 210px;
+        height: 220px;
+        padding: 75px 25px 0 25px;
+    }
+}
 @media screen and (max-width: 850px) {
     .header-container{
         flex-direction: column-reverse;
         gap: 7px;
     }
+    .featured-intro{
+        max-width: 75vw;
+    }
+    .featured-items{
+        flex-direction: column;
+        gap: 35px;
+    }
+    .featured-flower > img{
+        width: 300px;
+        height: 340px;
+        padding: 45px 30px 0 30px;
+        border-radius: 20px;
+    }
+
 }
 @media screen and (max-width: 450px) {
     .header-contents > h1{
@@ -12,5 +36,18 @@
         min-width: 310px;
         height: 400px;
         background-size: 300px;
+    }
+    .featured-intro{
+        max-width: 98vw;
+    }
+    .title{
+        font-size: 1.8rem;
+    }
+    .featured-flower > img{
+        width: 230px;
+        height: 240px;
+    }
+    .featured-flower > h5{
+        font-size: 1.02rem;
     }
 }
