--- a/styles/style.css
+++ b/styles/style.css
@@ -13,12 +13,23 @@ body{
 :root{
     --primary-color: rgba(85, 85, 85, 0.932);
 }
-
+.title{
+    font-size: 2.1rem;
+    font-weight: 800;
+    text-align: center;
+}
+.text-style{
+    font-size: 1rem;
+    font-weight: 500;
+    text-align: center;
+    color: var(--primary-color);
+    line-height: 23px;
+}
 header{
     background-color: rgba(247, 224, 228, 0.966);
     max-width: 100%;
 }
-.featured-container{
+.discount-container{
     max-width: 100%;
     background-color: rgb(253, 239, 241);
 }
@@ -72,3 +83,55 @@ button{
     background-position: bottom;
 }
 /* Header section ends here */
+
+/* Featured section starts here */
+.featured-container{
+    max-width: 1440px;
+    margin: 0 auto 80px auto;
+    padding-left: 13px;
+    padding-right: 13px;
+}
+.featured-intro{
+    max-width: 50%;
+    margin: 0 auto;
+    margin-bottom: 42px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 14px;
+}
+.featured-items{
+    max-width: fit-content;
+    margin: 0 auto;
+    display: flex;
+    gap: 30px;
+}
+.featured-flower{
+    max-width: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.featured-flower > img{
+    width: 300px;
+    height: 340px;
+    padding: 90px 30px 0 30px;
+    border-radius: 50% 50% 0 0;
+}
+.featured-flower > h5{
+    text-decoration: underline;
+    font-size: 1.2rem;
+    font-weight: 600;
+    margin-top: 15px;
+}
+.shobuh-ful{
+    background-color: rgba(168, 241, 201, 0.534);
+}
+.akashi-ful{
+    background-color: rgba(162, 220, 243, 0.531);
+}
+.golapi-ful{
+    background-color: rgba(247, 203, 210, 0.534);
+}
+/* Featured section ends here */
