--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -26,7 +26,14 @@
         padding: 45px 30px 0 30px;
         border-radius: 20px;
     }
-
+    .service-items{
+        flex-direction: column;
+        max-width: fit-content;
+        margin: 0 auto;
+    }
+    .service-item{
+        margin: 30px 20px;
+    }
 }
 @media screen and (max-width: 450px) {
     .header-contents > h1{
@@ -49,5 +56,8 @@
     }
     .featured-flower > h5{
         font-size: 1.02rem;
+    }
+    .service-item > p{
+        font-size: 1rem;
     }
 }
