--- a/styles/style.css
+++ b/styles/style.css
@@ -135,3 +135,32 @@ button{
     background-color: rgba(247, 203, 210, 0.534);
 }
 /* Featured section ends here */
+
+/* Service section starts here */
+.service-container{
+    padding: 0 13px;
+    max-width: 1140px;
+    margin: 0 auto 80px auto;
+}
+.service-items{
+    background-color: rgba(211, 211, 211, 0.418);
+    display: flex;
+    justify-content: space-around;
+    border-radius: 8px;
+}
+.service-item{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 65px 20px;
+    gap: 10px;
+}
+.service-item > img{
+    width: 70px;
+}
+.service-item > p{
+    font-size: 1.1rem;
+    font-weight: 600;
+    color: var(--primary-color);
+}
+/* Service section ends here */
