--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -34,6 +34,9 @@
     .service-item{
         margin: 30px 20px;
     }
+    .discount-section{
+        flex-direction: column-reverse;
+    }
 }
 @media screen and (max-width: 450px) {
     .header-contents > h1{
@@ -59,5 +62,8 @@
     }
     .service-item > p{
         font-size: 1rem;
+    }
+    .discount-img > img{
+        width: 250px;
     }
 }
