--- a/styles/style.css
+++ b/styles/style.css
@@ -195,3 +195,32 @@ button{
     width: 280px;
 }
 /* Discount section ends here */
+
+/* Instagram section starts here */
+.instagram-container{
+    max-width: 1440px;
+    margin: 0 auto 80px auto;
+    align-items: center;
+}
+.instagram-intro{
+    max-width: 50%;
+    margin: 0 auto 40px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+.instagram-posts{
+    max-width: fit-content;
+    margin: 0 auto;
+    padding: 0 13px;
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+.instagram-posts > img{
+    width: 250px;
+    border-radius: 5px;
+}
+/* Instagram section ends here */
+
