--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -51,7 +51,7 @@
         max-width: 95%;
     }
     .subscribe-container{
-        height: 500px
+        height: fit-content;
     }
     .subscribe-section{
         padding: 50px 12px;
@@ -124,5 +124,11 @@
     }
     .submit-btn{
         width: 280px;
+    }
+    footer{
+        height: 260px;
+    }
+    .footer-title{
+        font-size: 1.7rem;
     }
 }
