--- a/styles/style.css
+++ b/styles/style.css
@@ -273,3 +273,37 @@ button{
     border-radius: 5px;
 }
 /* Subscribe section ends here */
+
+/* Footer section starts here */
+footer{
+    background-color: rgba(0, 0, 0, 0.932);
+    height: 300px;
+    display: flex;
+    align-items: center;
+    padding: 0 13px;
+}
+.footer-container{
+    max-width: 600px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+}
+.footer-title{
+    color: white;
+    font-size: 2.1rem;
+    font-weight: 900;
+}
+.footer-description{
+    font-size: 1rem;
+    font-weight: 500;
+    text-align: center;
+    line-height: 23px;
+    color: rgba(190, 190, 190, 0.815);
+}
+.copyright-text{
+    font-size: 0.81rem;
+    color: rgba(158, 157, 157, 0.692);
+}
+/* Footer section ends here */
