--- a/styles/style.css
+++ b/styles/style.css
@@ -266,6 +266,7 @@ button{
     border-radius: 5px;
     font-size: 1rem;
     font-weight: 700;
+    cursor: pointer;
 }
 .email-field{
     width: 500px;
